--- a/style.css
+++ b/style.css
@@ -216,4 +216,72 @@ justify-content: center;
     box-shadow: 0 0 10px #00ffffb3, inset 0 0 10px #00ffffb3  ;
 }
 
+.btn-caixa{
+    display: flex;
+    align-items: center;
+    margin: 30px auto;
+    padding: 10px 20px 10px 20px;
+    color: white;
+    background-color: transparent;
+    border: solid 1px  #00ffffb3;
+    cursor: pointer;
 
+    
+}
+
+.btn-caixa:hover{
+    box-shadow: 0 0 10px #00ffffb3, inset 0 0 10px #00ffffb3  ;
+}
+
+
+
+/*slider dos projetos*/
+
+
+
+.container-slider{
+    display: flex;
+    width: 100%;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+    gap: 5rem;
+}
+
+.container-img{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 500px;
+}
+
+.slider{
+    opacity: 0;
+    transition: opacity .2s;
+    position: absolute;
+    width: 100%;
+    border-radius: 10px;
+}
+
+.on{
+    opacity: 1;
+}
+
+#prev-button, #next-button {
+
+    width: 30px;
+    height: 30px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+#prev-button img, #next-button img{
+    width: 100%;
+    height: 100%;
+}
+
+#prev-button img{
+    transform: rotate(180deg);
+}
