--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body{
     background: black;
-    height: 10000px;
+    
 }
 header{
     
@@ -234,6 +234,21 @@ justify-content: center;
 }
 
 
+.porjetos-h2{
+    text-align: center;
+    color:#00ffffb3 ;
+    position: relative;
+    top: 150PX;
+    font-family: "Roboto Condensed", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: <weight>;
+    font-style: normal;
+    font-size:20px;
+    
+    
+}
+
+
 
 /*slider dos projetos*/
 
@@ -245,6 +260,7 @@ justify-content: center;
     min-height: 100vh;
     align-items: center;
     justify-content: center;
+
     gap: 5rem;
 }
 
@@ -253,7 +269,8 @@ justify-content: center;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 500px;
+    width: 350px;
+    
 }
 
 .slider{
@@ -267,6 +284,7 @@ justify-content: center;
 .on{
     opacity: 1;
 }
+
 
 #prev-button, #next-button {
 
@@ -284,4 +302,114 @@ justify-content: center;
 
 #prev-button img{
     transform: rotate(180deg);
+}
+
+.img-proj{
+    width: 400px;
+    display: flex;
+    gap: 8px;
+    margin-left: 50px;
+}
+
+.img-proj img{
+    width: 270px;
+    height: 160px;
+    display: flex;
+    margin-top: 8px;
+    
+    
+}
+
+
+.container-sobre{
+    background-color: #00ffffb3 ;
+    display: flex;
+    color: black;
+    width: 60%;
+    align-items: center;
+    margin: 16px auto;
+    height: 500px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 17px;
+    border-radius: 40px;
+
+      
+    
+}
+
+.container-sobre img{
+  border-radius: 50%;
+  width: 200px;  
+  margin-left: 60px;
+  
+}
+
+.text-sobremim{
+    width: 400px;
+    margin-left: 200px;
+}
+
+
+.textsobremim{
+    color: white;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    font-family: "Roboto Condensed", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: <weight>;
+    font-style: normal;
+    font-size: 20px;
+    
+      
+    
+}
+
+.mim-color{
+    margin-left: 10px;
+    color: #00ffffb3;
+    font-size: 30px;
+}
+
+.redes img{
+    width: 30px;
+    margin-top: 20px;
+}
+
+footer{
+    color: white;
+    background-color: #00ffffb3;
+    margin-top: 250px;
+    height: 80px;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;  
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 14px;
+    
+
+}
+
+
+footer div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.email{
+    color: rgb(244, 0, 0);
+    margin-right: 10px;
+    font-weight: 700;
+}
+
+.wap{
+    color: chartreuse;
+    margin-left: 7px;
+    font-weight: 700;
 }
