--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
-*{
+* {
     padding: 0%;
     margin: 0%;
 }
 
-body{
+body {
     background: black;
-    
+
 }
-header{
-    
+
+/* inicio header*/ 
+
+header {
+
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -16,46 +19,48 @@ header{
     font-family: "Roboto", sans-serif;
     font-weight: 100;
     font-style: normal;
-    
-    
+
+
 }
 
-#logo-header{
+#logo-header {
     width: 70px;
 }
 
-header ul{
+header ul {
     display: flex;
     gap: 100px;
     font-size: 14px;
 }
 
-header li{
+header li {
     list-style: none;
     color: white;
-  
+
 
 }
 
-header a{
+header a {
     text-decoration: none
-
 }
 
-header button{
+header button {
     padding: 14px 28px;
     background-color: black;
     color: rgb(0, 0, 0);
     font-weight: 700;
     border-radius: 10px;
-    
+
     background-color: rgba(0, 255, 255, 0.703);
     border: solid black 1px;
-    
 
 }
 
-.container{
+/* fim header */ 
+
+
+/* primeira pagina(inicio) */ 
+.container {
     color: white;
     display: flex;
     align-items: center;
@@ -63,12 +68,12 @@ header button{
     margin: 100px 100px 0px 100px;
 }
 
-.img1{
+.img1 {
     margin-right: 100px;
     margin-top 200px: 00px;
 }
 
-.img1 img{
+.img1 img {
     width: 500px;
     transform: translateY(0px);
     animation: float 5s ease-in-out infinite;
@@ -88,27 +93,27 @@ header button{
         transform: translateY(0px);
     }
 }
-    
 
-.text p{
+
+.text p {
     position: relative;
     top: 29px;
 }
 
-.text h1{
+.text h1 {
     font-family: "Roboto Condensed", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
-  font-size: 50px;
+    font-optical-sizing: auto;
+    font-weight: <weight>;
+    font-style: normal;
+    font-size: 50px;
 }
 
-.text p{
+.text p {
     font-family: "Roboto", sans-serif;
     font-style: normal;
 }
 
-.text button{
+.text button {
     margin-top: 80px;
     padding: 10px 20px;
     border-radius: 10px;
@@ -118,61 +123,65 @@ header button{
 
 }
 
-.text span{
+.text span {
     color: rgba(0, 255, 255, 0.703);
 }
 
+/* fim primeira pagina(inicio) */ 
 
-.container-esp{
+/* inicio segunda parte-especialidades*/ 
+.container-esp {
     color: white;
     margin-top: 80px;
 
 }
 
-.container-esp h2{
+.container-esp h2 {
     display: flex;
     align-items: center;
     justify-content: center;
     font-family: "Roboto Condensed", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
-  font-size: 30px;
-    
+    font-optical-sizing: auto;
+    font-weight: <weight>;
+    font-style: normal;
+    font-size: 30px;
+
 }
 
-.HS{
+.HS {
 
-display: flex;
-gap: 10PX;
-align-items: center;
-justify-content: center;
+    display: flex;
+    gap: 10PX;
+    align-items: center;
+    justify-content: center;
 }
 
-#h2-color{
+#h2-color {
     color: #00ffffb3;
 }
 
 
 
-.caixas{
+.caixas {
     display: flex;
     gap: 50px;
     justify-content: center;
     align-items: center;
     margin-top: 40px;
-    
-    
-    
-    
+
+
+
+
 }
 
-.caixas img{
-   width: 80px; 
+.caixas img {
+    width: 80px;
 }
 
-.caixa1,.caixa2, .caixa3 {
-    
+.caixa1,
+.caixa2,
+.caixa3 {
+
     width: 300px;
     height: 350px;
     padding: 20px;
@@ -188,64 +197,68 @@ justify-content: center;
 }
 
 
-.caixas h3{
+.caixas h3 {
     font-family: "Roboto Condensed", sans-serif;
     font-optical-sizing: auto;
     font-weight: <weight>;
     font-style: normal;
     font-size: 27px;
-      
+
 }
 
-.caixas p{
+.caixas p {
     font-family: "Roboto", sans-serif;
     font-weight: 90;
     font-style: normal;
     font-size: 18px;
-      
+
 }
 
-.caixa1:hover{
-    box-shadow: 0 0 10px #00ffffb3, inset 0 0 10px #00ffffb3 ;
-}
-.caixa2:hover{
-    box-shadow: 0 0 10px #00ffffb3, inset 0 0 10px #00ffffb3  ;
+.caixa1:hover {
+    box-shadow: 0 0 10px #00ffffb3, inset 0 0 10px #00ffffb3;
 }
 
-.caixa3:hover{
-    box-shadow: 0 0 10px #00ffffb3, inset 0 0 10px #00ffffb3  ;
+.caixa2:hover {
+    box-shadow: 0 0 10px #00ffffb3, inset 0 0 10px #00ffffb3;
 }
 
-.btn-caixa{
+.caixa3:hover {
+    box-shadow: 0 0 10px #00ffffb3, inset 0 0 10px #00ffffb3;
+}
+
+.btn-caixa {
     display: flex;
     align-items: center;
     margin: 30px auto;
     padding: 10px 20px 10px 20px;
     color: white;
     background-color: transparent;
-    border: solid 1px  #00ffffb3;
+    border: solid 1px #00ffffb3;
     cursor: pointer;
 
-    
+
 }
 
-.btn-caixa:hover{
-    box-shadow: 0 0 10px #00ffffb3, inset 0 0 10px #00ffffb3  ;
+.btn-caixa:hover {
+    box-shadow: 0 0 10px #00ffffb3, inset 0 0 10px #00ffffb3;
 }
 
+/* fim segunda parte-especialidades*/ 
 
-.porjetos-h2{
+
+/* inicio terceira parte-projetos*/ 
+.porjetos-h2 {
     text-align: center;
-    color:#00ffffb3 ;
+    color: #00ffffb3;
     position: relative;
     top: 150PX;
     font-family: "Roboto Condensed", sans-serif;
     font-optical-sizing: auto;
     font-weight: <weight>;
     font-style: normal;
-    font-size:20px;
-    
-    
+    font-size: 20px;
+
+
 }
 
 
@@ -254,7 +267,7 @@ justify-content: center;
 
 
 
-.container-slider{
+.container-slider {
     display: flex;
     width: 100%;
     min-height: 100vh;
@@ -264,16 +277,16 @@ justify-content: center;
     gap: 5rem;
 }
 
-.container-img{
+.container-img {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 350px;
-    
+
 }
 
-.slider{
+.slider {
     opacity: 0;
     transition: opacity .2s;
     position: absolute;
@@ -281,12 +294,13 @@ justify-content: center;
     border-radius: 10px;
 }
 
-.on{
+.on {
     opacity: 1;
 }
 
 
-#prev-button, #next-button {
+#prev-button,
+#next-button {
 
     width: 30px;
     height: 30px;
@@ -295,34 +309,43 @@ justify-content: center;
     cursor: pointer;
 }
 
-#prev-button img, #next-button img{
+#prev-button img,
+#next-button img {
     width: 100%;
     height: 100%;
 }
 
-#prev-button img{
+#prev-button img {
     transform: rotate(180deg);
 }
 
-.img-proj{
+.img-proj {
     width: 400px;
     display: flex;
     gap: 8px;
     margin-left: 50px;
 }
 
-.img-proj img{
+.img-proj img {
     width: 270px;
     height: 160px;
     display: flex;
     margin-top: 8px;
-    
-    
+
+
 }
 
+/* fim terceira parte-projetos*/ 
 
-.container-sobre{
-    background-color: #00ffffb3 ;
+/* inicio quarta parte-sobremim*/ 
+
+.text-sobremim {
+    width: 400px;
+    margin-left: 200px;
+}
+
+.container-sobre {
+    background-color: #00ffffb3;
     display: flex;
     color: black;
     width: 60%;
@@ -335,26 +358,37 @@ justify-content: center;
     font-size: 17px;
     border-radius: 40px;
 
-      
+
+
+}
+
+.container-sobre img {
+    border-radius: 50%;
+    width:170px;
+    margin-left: 40px;
     
-}
+    
+   
 
-.container-sobre img{
-  border-radius: 50%;
-  width: 200px;  
-  margin-left: 60px;
-  
 }
-
-.text-sobremim{
-    width: 400px;
-    margin-left: 200px;
-}
-
 
 .textsobremim{
     color: white;
+    display: flex;
     text-align: center;
+    justify-content: center;
+    font-family: "Roboto Condensed", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: <weight>;
+    font-style: normal;
+    font-size: 20px;
+
+}
+
+
+.text-sobremim {
+    color: black;
+    text-align: left;
     display: flex;
     justify-content: center;
     font-family: "Roboto Condensed", sans-serif;
@@ -363,22 +397,28 @@ justify-content: center;
     font-style: normal;
     font-size: 20px;
     
-      
-    
+
+
+
 }
 
-.mim-color{
+.mim-color {
     margin-left: 10px;
     color: #00ffffb3;
     font-size: 30px;
 }
 
-.redes img{
+.redes img {
     width: 30px;
     margin-top: 20px;
 }
 
-footer{
+/* fim quarta parte-sobremim*/ 
+
+
+/* inicio footer*/ 
+
+footer {
     color: white;
     background-color: #00ffffb3;
     margin-top: 250px;
@@ -386,30 +426,227 @@ footer{
     text-align: center;
     font-family: "Roboto", sans-serif;
     font-weight: 300;
-    font-style: normal;  
+    font-style: normal;
     display: flex;
     flex-direction: column;
     justify-content: center;
     font-size: 14px;
-    
+
 
 }
 
 
-footer div{
+footer div {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.email{
+.email {
     color: rgb(244, 0, 0);
     margin-right: 10px;
     font-weight: 700;
 }
 
-.wap{
+.wap {
     color: chartreuse;
     margin-left: 7px;
     font-weight: 700;
+}
+
+/* fim footer*/ 
+
+@media screen and (max-width: 1050px){
+    header ul{
+        display: none;
+    }
+
+    header button{
+        display: none;
+    }
+
+    header img{
+       margin-left: 200px;
+    }
+    /*fim header mobbile*/
+
+
+    .container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0px 0px 0px 20px;
+    }
+
+    .text h1 {
+       
+        font-size: 40px;
+        text-align: center;
+    }
+
+    .text p {
+        
+        top: 20px;
+        text-align: justify;
+        padding: 20px;
+    
+    }
+
+
+    .text button {
+       margin: 20px 0px 0px 20px;
+      
+    }
+
+    .img1 {
+        margin-right: 00px;
+        margin-top: 10px 00px;
+    }
+
+    .img1 img{
+        width: 350px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
+
+
+    /*fim primeira pagina*/
+
+    .container-esp {
+        margin-top: 0px;
+    
+    }
+
+    .container-esp h2 {
+    
+        font-size: 26px;
+
+
+}
+
+.caixas {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;  
+    margin-top: 30px;
+    padding: 0px;
+
+}
+
+.caixa1,
+.caixa2,
+.caixa3 {
+
+    width: 280px;
+    height: 350px;
+    padding: 20px;
+   
+}
+
+
+/*fim especialidades*/
+
+
+.porjetos-h2 {
+   font-size: 19px;
+   top: 10px;
+
+
+}
+
+
+.container-slider {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
+    gap: 5rem;
+}
+
+.container-img {
+    display: flex;
+    flex-direction: row;
+    width: 250px;
+    margin-top: 120px;
+
+}
+
+
+#prev-button,
+#next-button {
+
+    display: none;
+}
+
+.img-proj {
+    margin-top: 30px;
+    
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+   
+}
+
+.img-proj img{
+    width: 300px;
+    margin-right: 28px;
+    
+   
+}
+
+/*fim projetos*/
+
+
+.textsobremim{
+    margin-top: 37px;
+    text-align: center;
+}
+
+.container-sobre {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    align-items: center;
+    margin: 16px auto;
+    height: 750px;
+    font-size: 17px;
+
+
+}
+
+.container-sobre .perfil{
+    width: 100px;
+    margin-top: 20px;
+    margin-left: 30px;
+    
+    
+}
+
+.redes img {
+    width: 30px;
+    margin-top: 20px;
+    padding: 10px;
+   
+}
+
+.text-sobremim{
+    
+    text-align: left;
+    display: flex;
+    margin-right: 200px;
+    color: black;
+    font-size: 19px;
+    width: 300px;
+   
+
+
+
+}
+
+
+
+
+
+
 }
