--- a/style.css
+++ b/style.css
@@ -1,14 +1,29 @@
+html{
+    scroll-behavior: smooth;
+    
+}
+
+#fora{
+    display: none;
+}
+section{
+    color: transparent;
+   
+}
+
+
 * {
     padding: 0%;
     margin: 0%;
 }
+
 
 body {
     background: black;
 
 }
 
-/* inicio header*/ 
+/* inicio header*/
 
 header {
 
@@ -17,9 +32,9 @@ header {
     justify-content: space-between;
     padding: 3px 100px 0px 100px;
     font-family: "Roboto", sans-serif;
-    font-weight: 100;
+    font-weight: 300;
     font-style: normal;
-
+ 
 
 }
 
@@ -31,6 +46,7 @@ header ul {
     display: flex;
     gap: 100px;
     font-size: 14px;
+    margin-right: 30px;
 }
 
 header li {
@@ -50,16 +66,17 @@ header button {
     color: rgb(0, 0, 0);
     font-weight: 700;
     border-radius: 10px;
+    cursor: pointer;
 
     background-color: rgba(0, 255, 255, 0.703);
     border: solid black 1px;
 
 }
 
-/* fim header */ 
+/* fim header */
 
 
-/* primeira pagina(inicio) */ 
+/* primeira pagina(inicio) */
 .container {
     color: white;
     display: flex;
@@ -118,8 +135,9 @@ header button {
     padding: 10px 20px;
     border-radius: 10px;
     background-color: rgba(0, 255, 255, 0.703);
-    font-weight: 700;
+    font-weight: 760;
     border: solid rgb(0, 0, 0) 1px;
+    color: rgb(255, 255, 255);
 
 }
 
@@ -127,9 +145,9 @@ header button {
     color: rgba(0, 255, 255, 0.703);
 }
 
-/* fim primeira pagina(inicio) */ 
+/* fim primeira pagina(inicio) */
 
-/* inicio segunda parte-especialidades*/ 
+/* inicio segunda parte-especialidades*/
 .container-esp {
     color: white;
     margin-top: 80px;
@@ -193,7 +211,7 @@ header button {
     padding-left: 40px;
     transition: all 0.2s ease-in-out;
     border: solid 1px #00ffffb3;
-    cursor: pointer;
+    
 }
 
 
@@ -243,10 +261,10 @@ header button {
     box-shadow: 0 0 10px #00ffffb3, inset 0 0 10px #00ffffb3;
 }
 
-/* fim segunda parte-especialidades*/ 
+/* fim segunda parte-especialidades*/
 
 
-/* inicio terceira parte-projetos*/ 
+/* inicio terceira parte-projetos*/
 .porjetos-h2 {
     text-align: center;
     color: #00ffffb3;
@@ -301,7 +319,7 @@ header button {
 
 #prev-button,
 #next-button {
-display: none;
+    display: none;
     width: 30px;
     height: 30px;
     border: none;
@@ -335,14 +353,16 @@ display: none;
 
 }
 
-/* fim terceira parte-projetos*/ 
+/* fim terceira parte-projetos*/
 
-/* inicio quarta parte-sobremim*/ 
+/* inicio quarta parte-sobremim*/
 
 .text-sobremim {
     width: 400px;
     margin-left: 200px;
 }
+
+
 
 .container-sobre {
     background-color: #00ffffb3;
@@ -365,17 +385,17 @@ display: none;
 
 .container-sobre img {
     border-radius: 50%;
-    width:170px;
+    width: 170px;
     margin-left: 20px;
-    
-    
-    
-    
-   
+
+
+
+
+
 
 }
 
-.textsobremim{
+.textsobremim {
     color: white;
     display: flex;
     text-align: center;
@@ -400,8 +420,8 @@ display: none;
     font-weight: <weight>;
     font-style: normal;
     font-size: 20px;
-    
-    
+
+
 
 
 
@@ -419,10 +439,10 @@ display: none;
     margin-left: 20px;
 }
 
-/* fim quarta parte-sobremim*/ 
+/* fim quarta parte-sobremim*/
 
 
-/* inicio footer*/ 
+/* inicio footer*/
 
 footer {
     color: white;
@@ -460,20 +480,21 @@ footer div {
     font-weight: 700;
 }
 
-/* fim footer*/ 
+/* fim footer*/
 
-@media screen and (max-width: 1050px){
-    header ul{
+@media screen and (max-width: 1050px) {
+    header ul {
         display: none;
     }
 
-    header button{
+    header button {
         display: none;
     }
 
-    header img{
-       margin-left: 200px;
+    header img {
+        margin-left: 200px;
     }
+
     /*fim header mobbile*/
 
 
@@ -485,23 +506,23 @@ footer div {
     }
 
     .text h1 {
-       
+
         font-size: 40px;
         text-align: center;
     }
 
     .text p {
-        
+
         top: 20px;
         text-align: justify;
         padding: 20px;
-    
+
     }
 
 
     .text button {
-       margin: 20px 0px 0px 20px;
-      
+        margin: 20px 0px 0px 20px;
+
     }
 
     .img1 {
@@ -509,7 +530,7 @@ footer div {
         margin-top: 10px 00px;
     }
 
-    .img1 img{
+    .img1 img {
         width: 350px;
         margin-top: 0px;
         margin-bottom: 0px;
@@ -520,135 +541,135 @@ footer div {
 
     .container-esp {
         margin-top: 0px;
-    
+
     }
 
     .container-esp h2 {
-    
+
         font-size: 26px;
 
 
-}
+    }
 
-.caixas {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;  
-    margin-top: 30px;
-    padding: 0px;
+    .caixas {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        margin-top: 30px;
+        padding: 0px;
 
-}
+    }
 
-.caixa1,
-.caixa2,
-.caixa3 {
+    .caixa1,
+    .caixa2,
+    .caixa3 {
 
-    width: 280px;
-    height: 350px;
-    padding: 20px;
-   
-}
+        width: 280px;
+        height: 350px;
+        padding: 20px;
 
-
-/*fim especialidades*/
+    }
 
 
-.porjetos-h2 {
-   font-size: 19px;
-   top: 10px;
+    /*fim especialidades*/
 
 
-}
+    .porjetos-h2 {
+        font-size: 19px;
+        top: 10px;
 
 
-.container-slider {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-
-    gap: 5rem;
-}
-
-.container-img {
-    display: flex;
-    flex-direction: row;
-    width: 250px;
-    margin-top: 120px;
-
-}
+    }
 
 
-#prev-button,
-#next-button {
+    .container-slider {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
 
-    display: none;
-}
+        gap: 5rem;
+    }
 
-.img-proj {
-    margin-top: 30px;
-    
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    align-items: center;
-   
-}
+    .container-img {
+        display: flex;
+        flex-direction: row;
+        width: 250px;
+        margin-top: 120px;
 
-.img-proj img{
-    width: 300px;
-    margin-right: 28px;
-    
-   
-}
-
-/*fim projetos*/
+    }
 
 
-.textsobremim{
-    margin-top: 37px;
-    text-align: center;
-}
+    #prev-button,
+    #next-button {
 
-.container-sobre {
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    align-items: center;
-    margin: 16px auto;
-    height: 750px;
-    font-size: 17px;
+        display: none;
+    }
 
+    .img-proj {
+        margin-top: 30px;
 
-}
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        align-items: center;
 
-.container-sobre .perfil{
-    width: 100px;
-    margin-top: 20px;
-    margin-left: 75px;
-    
-    
-}
+    }
 
-.redes img {
-    width: 30px;
-    margin-top: 20px;
-    padding: 10px;
-   
-}
-
-.text-sobremim{
-    
-    text-align: left;
-    display: flex;
-    margin-right: 200px;
-    color: black;
-    font-size: 19px;
-    width: 300px;
-   
+    .img-proj img {
+        width: 300px;
+        margin-right: 28px;
 
 
+    }
 
-}
+    /*fim projetos*/
+
+
+    .textsobremim {
+        margin-top: 37px;
+        text-align: center;
+    }
+
+    .container-sobre {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        align-items: center;
+        margin: 16px auto;
+        height: 750px;
+        font-size: 17px;
+
+
+    }
+
+    .container-sobre .perfil {
+        width: 100px;
+        margin-top: 20px;
+        margin-left: 75px;
+
+
+    }
+
+    .redes img {
+        width: 30px;
+        margin-top: 20px;
+        padding: 10px;
+
+    }
+
+    .text-sobremim {
+
+        text-align: left;
+        display: flex;
+        margin-right: 200px;
+        color: black;
+        font-size: 19px;
+        width: 300px;
+
+
+
+
+    }
 
 
 
