--- a/style-contato.css
+++ b/style-contato.css
@@ -14,6 +14,7 @@ body{
     font-family: "Roboto", sans-serif;
   font-weight: 100;
   font-style: normal;
+  text-decoration: none;
     
   
 }
@@ -89,6 +90,7 @@ body{
 
 .contato img{
     width: 40px;
+    
 }
 
 
@@ -96,6 +98,15 @@ body{
     display: flex;
     gap: 20px;
     text-decoration: none;
+    
+
+}
+
+.email-co{
+    color: white;
+    border: solid 1px white;
+    padding: 12px 12px 12px 12px;
+    border-radius: 5px;
 
 }
 
@@ -111,4 +122,23 @@ body{
 
 .emails{
     cursor: cell;
+}
+
+.voltar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 0;
+    
+}
+
+.voltar button{
+    width: 70px;
+    height: 70px;
+    background-color: rgba(2, 2, 2, 0.708);
+    border: none;
+    border-radius: 50%;
+    font-weight: 900;
+    position: relative;
+    margin-bottom: px;
 }
