--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ header button {
     font-weight: 760;
     border: solid rgb(0, 0, 0) 1px;
     color: rgb(255, 255, 255);
+    cursor: pointer;
 
 }
 
