--- a/style-contato.css
+++ b/style-contato.css
@@ -175,8 +175,8 @@ body{
     }
 
     .voltar button{
-        width: 6rem;
-        height: 6rem;
+        width: 70px;
+        height: 70px;
     }
 
 
